# PhoenixOS

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  PhOS-logs.txt  README.md  Run.bat  all.sh  bs.py  build.py  build.sh  build_tools.py  clean.sh  create_image.sh  generate_symbols.sh  image.iso  limine.cfg  linker.ia32.ld  linker.ld  linker.x86_64.ld  log.txt  meson.build  qemu.sh  run_bios.sh  run_uefi.sh  setup.sh  setup_build_tools.sh
CrossFiles/: kernel-target-x86_64.cross-file
Kernel/: ACPI.cpp  ACPI.hpp  BootInfo.cpp  BootInfo.hpp  Common.hpp  KLibC.cpp  KLibC.hpp  KernelStart.cpp  Makefile  icxxabi.cpp  linker.aarch64.ld  linker.x86-64.ld  linker.x86_64.ld  meson.build
Kernel/ACPI/: ACPI.cpp  ACPI.hpp  MADT.cpp  MADT.hpp
Kernel/API/POSIX/sys/: stat.h  time.h  types.h
Kernel/Arch/: Arch.hpp
Kernel/Arch/Interrupts/: InterruptHandler.hpp  InterruptManager.hpp
Kernel/Arch/aarch64/: Arch.cpp  meson.build
Kernel/Arch/aarch64/Drivers/: E9Logger.cpp  Serial.cpp
Kernel/Arch/x86/: APIC.cpp  APIC.hpp  Arch.cpp  CMOS.cpp  CMOS.hpp  CPU.cpp  CPU.hpp  CPUID.hpp  GDT.cpp  GDT.hpp  HPET.cpp  HPET.hpp  IDT.cpp  IDT.hpp  IO.hpp  IOAPIC.cpp  LAPIC.cpp  LAPIC.hpp  PIC.cpp  PIC.hpp  PIT.cpp  PIT.hpp  Types.hpp  interrupts.ia32.asm  interrupts.x86_64.asm
Kernel/Arch/x86_64/: Arch.cpp  CMOS.cpp  CMOS.hpp  GDT.cpp  GDT.hpp  IDT.cpp  IDT.hpp  IO.hpp  InterruptManager.cpp  Types.hpp  interrupts.x86_64.S  interrupts.x86_64.asm  meson.build
Kernel/Arch/x86_64/Drivers/: E9Logger.cpp  IOAPIC.cpp  IOAPIC.hpp  Keyboard.cpp  PIC.cpp  PIC.hpp  PS2.cpp  Serial.cpp
Kernel/Arch/x86_64/Drivers/Time/: HPET.hpp  RTC.cpp  RTC.hpp
Kernel/Drivers/: Keyboard.hpp  PS2.hpp  Serial.hpp  Terminal.cpp  Terminal.hpp
Kernel/Memory/: KernelHeap.cpp  KernelHeap.hpp  PhysicalMemoryManager.cpp  PhysicalMemoryManager.hpp  SlabAllocator.hpp  VirtualMemoryManager.cpp  VirtualMemoryManager.hpp
Kernel/Scheduler/: Process.hpp  Scheduler.cpp  Scheduler.hpp  Spinlock.hpp  Thread.cpp  Thread.hpp  scheduler.x86_64.asm
Kernel/Utility/: Bitmap.hpp  Function.hpp  KLibC.cpp  KLibC.hpp  Logger.cpp  Logger.hpp  Math.hpp  Path.hpp  Stacktrace.cpp  Stacktrace.hpp  UnixTypes.hpp  Vector.hpp
Kernel/VFS/: VirtualFileSystem.hpp
Kernel/VirtualFileSystem/: Filesystem.hpp  INode.cpp  INode.hpp  MountPoint.hpp  VirtualFileSystem.cpp  VirtualFileSystem.hpp
Kernel/VirtualFileSystem/DevTmpFs/: DevTmpFs.cpp  DevTmpFs.hpp  DevTmpFsINode.cpp  DevTmpFsINode.hpp
Kernel/VirtualFileSystem/Initrd/: Initrd.cpp  Initrd.hpp  Ustar.cpp  Ustar.hpp
Kernel/VirtualFileSystem/TmpFs/: TmpFs.cpp  TmpFs.hpp  TmpFsINode.cpp  TmpFsINode.hpp
Kernel/WindowServer/: Screen.hpp  WindowManager.cpp
Meta/: Makefile
Userland/Libraries/LibC/: assert.cpp  assert.h  ctype.cpp  ctype.h  errno.cpp  errno.h  meson.build  stack_smashing_protector.cpp  stdio.cpp  stdio.h  stdlib.cpp  stdlib.h  string.cpp  string.h  wchar.h
Userland/Libraries/LibC++/: cassert  cerrno  cmath  cstdio  cstdlib  cstring  cwchar  deque  format  functional  list  memory  mutex  queue  random  stdexcept  string  system_error  unordered_map  vector
Userland/Libraries/LibC++/details/: allocator  char_traits  string_view
Userland/Libraries/LibC/gnu/: stubs-32.h
iso_root/: image.iso  kernel.elf  limine.cfg  myos.elf  phoenixos.iso
kernel/src/: kernel_entry.asm  kernel_main.c
src/PhOS/: common.h  logger.c  logger.h
src/PhOS/HAL/: io_access.h  memory_access.h  serial.c  serial.h
src/PhOS/boot/: boot_sector.asm  boot_sector.asm.disable
src/PhOS/kernel/: cpu.h  kernel.c  logger.c  logger.h  stivale.c  stivale.h  terminal.c  terminal.h
src/PhOS/kernel/arch/x86_64/: gdt.c  gdt.h  idt.c  idt.h
src/PhOS/kernel/interrupts/: apic.c  apic.h  idt.c  idt.h  interrupts.asm  pic.c  pic.h
src/PhOS/kernel/io/: io_access.h  serial.c  serial.h
src/PhOS/kernel/memory/: bitmap.h  gdt.asm  gdt.c  gdt.h  physical_memory_allocator.c  physical_memory_allocator.h  physical_memory_manager.c  physical_memory_manager.h  virtual_memory_manager.h
src/PhoenixOS/Kernel/: Common.hpp  KernelMain.cpp  Stivale.cpp  Stivale.hpp  Types.hpp
src/PhoenixOS/Kernel/IO/: ANSIEscapeCodes.hpp  DirectIO.hpp  IOManager.cpp  IOManager.hpp  Serial.cpp  Serial.hpp  Terminal.cpp  Terminal.hpp
src/PhoenixOS/Utility/: Logger.hpp
src/libc/: errno.h  stdbool.h  stdlib.c  stdlib.h  string.c  string.h
src/userland/libc/: errno.c  errno.h  math.c  math.h  stdlib.c  stdlib.h  string.c  string.h
subprojects/packagefiles/: cwalk.tar  fmt.tar  ovmf_binaries.tar  veque.tar
